--- a/home/templates/account.html
+++ b/home/templates/account.html
@@ -10,54 +10,23 @@
         </div> 
         
         <div class="mt-4">
-            <form method="POST" action="" enctype="multipart/form-data">
-                {{ form.hidden_tag() }}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Account Info</legend>
-                    <div class="form-group">
-                        {{ form.username.label(class="form-control-label") }}
-                        {% if form.username.errors %}
-                            {{ form.username(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.username.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.username(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.email.label(class="form-control-label") }}
-                        {% if form.email.errors %}
-                            {{ form.email(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.email.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.email(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.picture.label() }}
-                        {{ form.picture(class="form-control-file") }}
-                        {% if form.picture.errors %}
-                            {% for error in form.picture.errors %}
-                                <span class="text-danger">{{ error }}</span></br>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                </fieldset>
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Account Information</legend>
                 <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
+                    <label class="form-control-label">Username:</label>
+                    <div class="form-control-plaintext">{{ current_user.username }}</div>
                 </div>
-            </form>
+                <div class="form-group">
+                    <label class="form-control-label">Email:</label>
+                    <div class="form-control-plaintext">{{ current_user.email }}</div>
+                </div>
+            </fieldset>
         </div>
     </div>
     <div class="mt-3">
+        <a class="btn btn-outline-info" href="{{ url_for('update_account') }}">Update Account Info</a>
         <a class="btn btn-outline-secondary" href="{{ url_for('change_password') }}">Change Password</a>
+        <a class="btn btn-outline-success" href="{{ url_for('user_preferences') }}">User Preferences</a>
         <a class="btn btn-outline-primary" href="{{ url_for('dashboard') }}">Go to Dashboard</a>
     </div>
 {% endblock %}
