--- a/home/templates/goals.html
+++ b/home/templates/goals.html
@@ -21,7 +21,7 @@
     {% if goals.items %}
         {% for goal in goals.items %}
             <article class="media content-section {% if goal.status == 'completed' %}border-success bg-light{% endif %}">
-                <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + goal.owner.image_file) }}">
+                <img class="profile-img-small" src="{{ url_for('static', filename='profile_pics/' + goal.owner.image_file) }}">
                 <div class="media-body">
                     <div class="article-metadata">
                         <small class="text-muted">Created: {{ goal.date_time.strftime('%Y-%m-%d') }}</small>
