--- a/home/templates/group_detail.html
+++ b/home/templates/group_detail.html
@@ -82,7 +82,7 @@
     {% if member.role == 'admin' and (pending_goals or pending_transactions) %}
         <div class="card mb-4 border-warning">
             <div class="card-header bg-warning text-dark">
-                <h5 class="mb-0">⚠ Pending Approvals</h5>
+                <h5 class="mb-0">Pending Approvals</h5>
             </div>
             <div class="card-body">
                 {% if pending_goals %}
