--- a/home/templates/join_group.html
+++ b/home/templates/join_group.html
@@ -10,7 +10,7 @@
                 <ol class="mb-0">
                     <li>Ask a group member for the Group ID</li>
                     <li>Enter the Group ID below</li>
-                    <li>Add an optional message explaining why you want to join</li>
+                    <li>Write an optional message explaining why you want to join</li>
                     <li>Submit your request</li>
                     <li><strong>All join requests require admin approval</strong></li>
                 </ol>
@@ -19,8 +19,6 @@
             <div class="alert alert-warning">
                 <h2>Important:</h2>
                 <ul class="mb-0">
-                    <li><strong>All groups require admin approval</strong> - even open groups</li>
-                    <li><strong>Rejoining a group</strong> also requires admin approval</li>
                     <li><strong>Closed groups</strong> reject all join requests immediately</li>
                     <li><strong>Open groups</strong> accept requests but still require approval</li>
                 </ul>
