--- a/home/templates/group_goals.html
+++ b/home/templates/group_goals.html
@@ -80,14 +80,14 @@
     {% else %}
         <div class="text-center py-5">
             {% if active_tab == 'proposed' %}
-                <h3>No proposed goals yet!</h3>
+                <h3>No proposed goals yet</h3>
                 <p class="text-muted">Start by proposing a goal</p>
                 <a href="{{ url_for('new_group_goal', group_id=group_id) }}" class="btn btn-primary">Propose Goal</a>
             {% elif active_tab == 'approved' %}
                 <h3>No approved goals yet!</h3>
                 <p class="text-muted">No goals have been approved to see them here.</p>
             {% elif active_tab == 'denied' %}
-                <h3>No denied goals yet!</h3>
+                <h3>No denied goals yet</h3>
                 <p class="text-muted">No goals have been denied to see them here.</p>
             {% endif %}
         </div>
